--- a/about.html
+++ b/about.html
@@ -5,13 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Portfolios </title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="about.css">
-
 </head>
 
 <body>
@@ -25,7 +21,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="portfolio.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
@@ -48,11 +44,7 @@
             <img src="https://th.bing.com/th/id/OIP.neyNfTzHJQxdHX77cAOPmgHaE8?w=264&h=180&c=7&r=0&o=5&pid=1.7"
               alt="profile">
           </div>
-          <div class="contact">
-            <h3>ABOUT</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos, rem doloribus soluta sed vitae minus, fugit
-              quia ratione praesentium minima id sequi consequuntur numquam modi non? Hic, rerum. Nesciunt, quis.</p>
-          </div>
+          
           <div class="skill">
             <h4>SKILLS</h4>
             <ul>
@@ -83,8 +75,15 @@
     </div>
     <div class="col-md-6">
       <div class="right-section">
+        <div class="about">
+          <br>
+          <b><h3>ABOUT</h3></b>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos, rem doloribus soluta sed vitae minus, fugit
+            quia ratione praesentium minima id sequi consequuntur numquam modi non? Hic, rerum. Nesciunt, quis.</p>
+        </div>
         <div class="education">
-          <h4>EDUCATION</h4>
+          <br>
+          <b><h4>EDUCATION</h4></b>
           <ul>
             <li>SSLC passed with 94% in 2022</li>
             <li>HSC passed with 91% in 2024 </li>
