--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title> Portfolios </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-warning">
@@ -34,8 +34,10 @@
     <div class="row" >
         <div class="col-md-6 pic">
             <h1><span class="front">Front</span>end</h1>
+            <div class="title">
             <h3>Developer</h3>
         <p>Hi.I am Lakkitha.I am a front end developer.</p>
+      </div>
         </div>
         <div class="col-md-6 content">
             <img  class="image" src="https://th.bing.com/th/id/OIP.vQcH6uRqJd1SIpce-41uUgHaLH?w=184&h=276&c=7&r=0&o=5&pid=1.7" alt="Profile image">
